<resources>
    <string name="app_name">NfsClient</string>
    <string name="appPreferencesSettingsTitle">NFS Client settings</string>
    <string name="appPreferencesNfsServersTitle">NFS Servers</string>
    <string name="appPreferencesNfsServersSummary">Manage the access to NFS servers</string>
    <string name="appPreferencesNfsServersKey">appPreferencesNfsServersKey</string>
    <string name="appPreferencesAboutTitle">About</string>
    <string name="appPreferencesAboutSummary"></string>
    <string name="appPreferencesAboutKey">appPreferencesAboutKey</string>
    <string name="noServers">"\n\n\nTo add a server, tap the above <b>New server icon</b>"
    </string>
    <plurals name="listAllServers">
        <item quantity="one">1 server</item>
        <item quantity="other">%d servers</item>
    </plurals>
    <string name="newServer">New server</string>
    <string name="serverPreferencesScreenTitle">Edit a server</string>
    <string name="serverPreferencesSettingsTitle">%s server</string>
    <string name="serverPreferencesServerInternetAddressTitle">Server Internet address</string>
    <string name="serverPreferencesServerInternetAddressSummary">Set the server Internet address</string>
    <string name="serverPreferencesServerInternetAddressKey">serverPreferencesInternetAddressKey</string>
    <string name="serverPreferencesServerInternetAddressDialogTitle">Server Internet address</string>
    <string name="serverPreferencesServerInternetAddressDialogMessage">Dot notation, i.e. n.n.n.n</string>
    <string name="serverPreferencesServerHostNameTitle">Server host name</string>
    <string name="serverPreferencesServerHostNameSummary">Set the server host name</string>
    <string name="serverPreferencesServerHostNameKey">serverPreferencesHostNameKey</string>
    <string name="serverPreferencesServerHostNameDialogTitle">Server host name</string>
    <string name="serverPreferencesServerUserNameTitle">Server user name</string>
    <string name="serverPreferencesServerUserNameSummary">Set the server user name</string>
    <string name="serverPreferencesServerUserNameKey">serverPreferencesUserNameKey</string>
    <string name="serverPreferencesServerUserNameDialogTitle">User name</string>
    <string name="serverPreferencesServerUserPasswordTitle">Server user password</string>
    <string name="serverPreferencesServerUserPasswordSummary">Set the server user password</string>
    <string name="serverPreferencesServerUserPasswordKey">serverPreferencesUserPasswordKey</string>
    <string name="serverPreferencesServerUserPasswordDialogTitle">User password</string>
    <string name="serverPreferencesServerExportDirectoriesTitle">Server export directories</string>
    <string name="serverPreferencesServerExportDirectoriesSummary">Set the server export directories</string>
    <string name="serverPreferencesServerExportDirectoriesKey">serverPreferencesExportDirectoriesKey</string>
    <string name="serverPreferencesServerExportDirectoriesDialogTitle">Server export directories</string>
    <string name="serverExportDirectoriesAddButton">Add directory</string>
    <string name="serverExportDirectoriesRemoveButton">Remove directory</string>
    <string name="genericFileImportSelectionDialogLocationSelectionLabel">Select a location</string>
    <string name="genericFileImportSelectionDialogFileLocationLabel">Import a file</string>
    <string name="genericFileImportSelectionDialogFilenameLabel">Filename</string>
    <string name="genericFileImportSelectionDialogDeviceStorageLabel">Import from device</string>
    <string name="genericFileImportSelectionDialogCloudStorageLabel">Import from cloud</string>
    <string name="genericFileImportSelectionDialogDropboxDefaultLocation">Default account</string>
    <string name="genericFileImportSelectionDialogLoginLocations">Login accounts</string>
    <string name="mime_file_text">application/octet-stream</string>
	<string name="file_extension_png">.png</string>
	<string name="file_extension_gif">.gif</string>
	<string name="file_extension_jpg">.jpg</string>
	<string name="file_extension_jpeg">.jpeg</string>
	<string name="file_extension_bmp">.bmp</string>
	<string name="mime_file_png">image/png</string>
    <string name="mime_file_gif">image/gif</string>
    <string name="mime_file_jpg">image/jpg</string>
    <string name="mime_file_jpeg">image/jpeg</string>
    <string name="mime_file_bmp">"image/bmp</string>
	<string name="file_extension_mp3">.mp3</string>
	<string name="file_extension_wav">.wav</string>
	<string name="file_extension_ogg">.ogg</string>
	<string name="file_extension_mid">.mid</string>
	<string name="file_extension_midi">.midi</string>
	<string name="file_extension_amr">.amr</string>
	<string name="file_extension_aac">.aac</string>
	<string name="mime_file_mp3">audio/mp3</string>
	<string name="mime_file_wav">audio/wav</string>
	<string name="mime_file_ogg">audio/x-ogg</string>
	<string name="mime_file_mid">audio/mid</string>
	<string name="mime_file_midi">audio/midi</string>
	<string name="mime_file_amr">audio/AMR</string>
	<string name="mime_file_aac">audio/x-aac</string>
	<string name="file_extension_mpeg">.mpeg</string>
	<string name="file_extension_3gp">.3gp</string>
	<string name="mime_file_mpeg">video/mpeg</string>
	<string name="mime_file_3gpp">video/3gpp</string>
	<string name="file_extension_jar">.jar</string>
	<string name="file_extension_zip">.zip</string>
	<string name="file_extension_rar">.rar</string>
	<string name="file_extension_gz">.gz</string>
	<string name="mime_file_jar">application/java-archive</string>
	<string name="mime_file_zip">application/zip</string>
	<string name="mime_file_rar">application/x-rar-compressed</string>
	<string name="mime_file_gzip">application/gzip</string>
	<string name="file_extension_htm">.htm</string>
	<string name="file_extension_html">.html</string>
	<string name="file_extension_php">.php</string>
	<string name="mime_file_htm">text/html</string>
	<string name="mime_file_html">text/html</string>
	<string name="mime_file_php">text/php</string>
	<string name="file_extension_txt">.txt</string>
	<string name="file_extension_xml">.xml</string>
	<string name="mime_file_txt">text/plain</string>
	<string name="mime_file_csv">text/csv</string>
	<string name="mime_file_xml">text/xml</string>
	<string name="file_extension_apk">.apk</string>
	<string name="mime_file_apk">application/vnd.android.package-archive</string>
    <string name="about_comments">Manage files on the SD card.</string>
    <string name="file_manager_app_name">OI File Manager</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_multi_select">Multi Select</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_include_in_media_scan">Include in media scan</string>
    <string name="menu_exclude_from_media_scan">Exclude from media scan</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="file_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="file_deleted">File deleted.</string>
    <string name="folder_deleted">Folder deleted.</string>
    <string name="file_renamed">File renamed.</string>
    <string name="folder_renamed">Folder renamed.</string>
    <string name="file_moved">File moved.</string>
    <string name="folder_moved">Folder moved.</string>
    <string name="file_copied">File copied.</string>
    <string name="move_title">Select folder to move to</string>
    <string name="move_button">Move here</string>
    <string name="copy_title">Select folder to copy to</string>
    <string name="copy_button">Copy here</string>
	<string name="deleting_files">Deleting files&#8230;</string>
	<string name="really_delete_multiselect">Do you really want to delete %d files?</string>
    <string name="move_button_multiselect">Move</string>
    <string name="copy_button_multiselect">Copy</string>
    <string name="delete_button_multiselect">Delete</string>
    <string name="multiselect_title">Select multiple files</string>
    <string name="error_selection">Please select one or more file(s).</string>
    <string name="copied_file_name">Copy of %s</string>
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>
    <string name="media_scan_included">This folder will be included in the next media scan.</string>
    <string name="media_scan_excluded">This folder will be excluded during the next media scan.</string>
    <string name="error_creating_new_folder">Could not create new folder.</string>
    <string name="error_deleting_file">Could not delete file.</string>
    <string name="error_deleting_folder">Could not delete folder \"%s\".</string>
    <string name="error_renaming_file">Could not rename file.</string>
    <string name="error_renaming_folder">Could not rename folder.</string>
    <string name="error_moving_file">Could not move file.</string>
    <string name="error_moving_folder">Could not move folder.</string>
    <string name="error_copying_file">Could not copy file.</string>
    <string name="error_file_does_not_exists">File does not exist.</string>
    <string name="error_deleting_child_file">Could not delete child file \"%s\".</string>
    <string name="error_generic">An error occurred: </string>
    <string name="error_media_scan">Could not change media scan settings.</string>
    <string name="send_not_available">No application available for sending.</string>
    <string name="application_not_available">Application not available</string>
	<string name="settings">Settings</string>
    <string name="preference_advanced_features">Advanced features</string>
	<string name="preference_mediascan_title">Exclude from media scan</string>
    <string name="preference_mediascan_summary_on">Show menu item to exclude folders from media scan.</string>
    <string name="preference_mediascan_summary_off">Hide menu item to exclude folders from media scan.</string>
    <string name="ign_error_report_email_subject">New error report: %s</string>
    <string name="ign_error_report_send_button">Send Email</string>
    <string name="ign_progress_dialog_title">Loading&#8230;</string>
    <string name="ign_progress_dialog_msg">Please wait a moment</string>
    <string name="infoPreferencesTitle">Info</string>
    <string name="infoPreferencesInstructionsTitle">Instructions</string>
    <string name="infoPreferencesInstructionsSummary">A brief set of instructions</string>
    <string name="infoPreferencesInstructionsKey">infoPreferencesInstructionsKey</string>
    <string name="infoPreferencesAboutTitle">About</string>
    <string name="infoPreferencesAboutKey">infoPreferencesAboutKey</string>
    <string name="appPreferencesInfoTitle">NFS Client settings</string>
    <string name="genericProgressDialogLoading">Loading&#8230;</string>
    <string name="genericProgressDialogImporting">Importing&#8230;</string>
    <string name="genericProgressDialogExporting">Exporting&#8230;</string>
    <string name="genericProgressDialogConnecting">Connecting&#8230;</string>
    <string name="genericProgressDialogConnected">Connected</string>
    <string name="genericProgressDialogRefreshingAccount">Refreshing the account&#8230;</string>
    <string name="genericPasswordLabel">Password:</string>
    <string name="genericPasswordConfirmLabel">Confirm:</string>
    <string name="genericPasswordShowPasswordLabel">Show/Hide:</string>
    <string name="genericPasswordShowLabel">Show</string>
    <string name="genericPasswordHideLabel">Hide</string>
</resources>