<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
 
<MimeTypes>
	<!-- Image types -->
	<type extension=".png" mimetype="@string/mime_file_png" />
	<type extension=".gif" mimetype="@string/mime_file_gif" />
	<type extension=".jpg" mimetype="@string/mime_file_jpg" />
	<type extension=".jpeg" mimetype="@string/mime_file_jpeg" />
	<type extension=".bmp" mimetype="@string/mime_file_bmp" />
	    
	<!-- Audio types -->
	<type extension=".mp3" mimetype="@string/mime_file_mp3" />
	<type extension=".wav" mimetype="@string/mime_file_wav" />
	<type extension=".ogg" mimetype="@string/mime_file_ogg" />
	<type extension=".mid" mimetype="@string/mime_file_mid" />
	<type extension=".midi" mimetype="@string/mime_file_midi" />
	<type extension=".amr" mimetype="@string/mime_file_amr" />
	<type extension=".aac" mimetype="@string/mime_file_aac"/>
	
	<!-- Video types -->
	<type extension=".mpeg" mimetype="@string/mime_file_mpeg" />
	<type extension=".3gp" mimetype="@string/mime_file_3gpp" />
	
	<!-- Package types -->
	<type extension=".jar" mimetype="@string/mime_file_jar" />
	<type extension=".zip" mimetype="@string/mime_file_zip" />
	<type extension=".rar" mimetype="@string/mime_file_rar" />
	<type extension=".gz" mimetype="@string/mime_file_gzip" />
	
	<!-- Web browser types -->
	<type extension=".htm" mimetype="@string/mime_file_htm" />
	<type extension=".html" mimetype="@string/mime_file_html" />
	<type extension=".php" mimetype="@string/mime_file_php" />
	
	<!-- Text types -->
	<type extension=".txt" mimetype="@string/mime_file_txt" />
	<type extension=".csv" mimetype="@string/mime_file_csv" />
	<type extension=".xml" mimetype="@string/mime_file_xml" />
	
	<!-- Android specific -->
	<type extension=".apk" mimetype="application/vnd.android.package-archive" />
	
</MimeTypes>